# kart-data-logger

./: .gitignore  LICENSE.md  README.MD  fix_stride.py  generate.py  partitions.csv  platformio.ini
boards/: JC3248W535N.json  esp32-3248S035C.json.original
data/: real_car_ride.csv
include/: AudioManager.h  BatteryManager.h  Config.h  GpsManager.h  ImuManager.h  LapManager.h  LogManager.h  StorageManager.h  TelemetryData.h  VoiceParser.h  WifiManager.h
lib/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_theme.cpp  ui_theme.h
lib/ui/components/: ui_comp_hook.c
lib/ui/fonts/: ui_font_BarlowCondensedBold22.c  ui_font_BarlowCondensedBold32.c  ui_font_BarlowCondensedBold48.c  ui_font_BarlowCondensedBold52.c  ui_font_BarlowCondensedBold60.c  ui_font_DS20.c
lib/ui/images/: ui_img_1524054327.c  ui_img_1963045862.c  ui_img_1963046887.c  ui_img_1963047912.c  ui_img_1963048937.c  ui_img_1963050210.c  ui_img_1963051235.c  ui_img_1963053285.c  ui_img_1963060972.c  ui_img_1963061997.c  ui_img_images_bg_png.c  ui_img_images_center_green_png.c  ui_img_images_center_red_png.c  ui_img_images_center_yellow_png.c  ui_img_images_cl_green_png.c  ui_img_images_cl_red_png.c  ui_img_images_cl_yellow_png.c  ui_img_images_cr_green_png.c  ui_img_images_cr_red_png.c  ui_img_images_cr_yellow_png.c  ui_img_images_g10_png.c  ui_img_images_g11_png.c  ui_img_images_g12_png.c  ui_img_images_g13_png.c  ui_img_images_g14_png.c  ui_img_images_g15_png.c  ui_img_images_g16_png.c  ui_img_images_g17_png.c  ui_img_images_g18_png.c  ui_img_images_g19_png.c  ui_img_images_g1_png.c  ui_img_images_g20_png.c  ui_img_images_g2_png.c  ui_img_images_g3_png.c  ui_img_images_g4_png.c  ui_img_images_g5_png.c  ui_img_images_g6_png.c  ui_img_images_g7_png.c  ui_img_images_g8_png.c  ui_img_images_g9_png.c  (+2 more)
lib/ui/screens/: ui_Screen1.c  ui_Screen1.h  ui_configscreen.c  ui_configscreen.h  ui_dashboardscreen.c  ui_dashboardscreen.h  ui_statusbarscreen.c  ui_statusbarscreen.h  ui_trackscreen.c  ui_trackscreen.h
partitions/: esp32-3248S035C.csv  seed_xiao_esp32s3.csv
src/: AudioManager.cpp  BatteryManager.cpp  GpsManager.cpp  ImuManager.cpp  LapManager.cpp  (+8 more)
(+90 files in other folders)
