SET(SOURCES screens/ui_Screen1.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_images_bg_png.c
    images/ui_img_1963053285.c
    images/ui_img_1963050210.c
    images/ui_img_1963051235.c
    images/ui_img_1963047912.c
    images/ui_img_1963048937.c
    images/ui_img_1963045862.c
    images/ui_img_1963046887.c
    images/ui_img_1963060972.c
    images/ui_img_1963061997.c
    images/ui_img_1524054327.c
    images/ui_img_images_center_red_png.c
    images/ui_img_images_center_yellow_png.c
    images/ui_img_images_center_green_png.c
    images/ui_img_images_cl_red_png.c
    images/ui_img_images_cl_yellow_png.c
    images/ui_img_images_cl_green_png.c
    images/ui_img_images_cr_red_png.c
    images/ui_img_images_cr_yellow_png.c
    images/ui_img_images_cr_green_png.c
    images/ui_img_images_left_red_png.c
    images/ui_img_images_g1_png.c
    images/ui_img_images_g2_png.c
    images/ui_img_images_g3_png.c
    images/ui_img_images_g4_png.c
    images/ui_img_images_g5_png.c
    images/ui_img_images_g6_png.c
    images/ui_img_images_g7_png.c
    images/ui_img_images_g8_png.c
    images/ui_img_images_g9_png.c
    images/ui_img_images_g10_png.c
    images/ui_img_images_g11_png.c
    images/ui_img_images_g12_png.c
    images/ui_img_images_g13_png.c
    images/ui_img_images_g14_png.c
    images/ui_img_images_g15_png.c
    images/ui_img_images_g16_png.c
    images/ui_img_images_g17_png.c
    images/ui_img_images_g18_png.c
    images/ui_img_images_g19_png.c
    images/ui_img_images_g20_png.c
    images/ui_img_images_needle_png.c
    fonts/ui_font_DS18.c
    fonts/ui_font_DS36.c)

add_library(ui ${SOURCES})
